- update to support for JDK 11 - update dependency - update gradle - code cleanup - update gitignore